[package]
name = "bevy_ui_style_builder"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ui", "games"]
categories = ["game-development", "graphics", "gui"]
repository = "https://github.com/ickshonpe/bevy_ui_style_builder"
readme = "README.md"
description = "Experimental Bevy UI helper extension methods."

[dependencies.bevy]
version = "0.9.1"
default-features = false
features = ["bevy_ui", "render"]

[dependencies]
thiserror = "1.0.38"

[dev-dependencies]
bevy = "0.9.1"
